Add support for CRAM, check contigs name (#93)
* Use cram file

* Update conf

* Add sbwf bam check chr

* Rehead bam file with awk

* Move samtools merge to bam region

* Fix config file

* Fix name imputation

* Fix test cram bam

* Remove process for samples and only publish once panel

* Rename process

* Add renaming and check sbwf for bam

* Simplify contig check

* Rename workflow

* Rename test

* Improve nf-test

* Add workflow and metro map

* Fix check contig names

* Add check chr workflow to phaseimpute and improve it

* Add nextflow schema to nf-test config

* Add nf-test to initialisation pipeline

* Patch modules

* Fix nf-test

* Update CHANGELOG

* Fix empty chr channel

* Fix file prefix

* Fix file prefix

* Fix samplesheet column name

* Fix fai combination

* Update CHANGELOG

* Improve Glimpse2 phasing process

* Add example

* Remove input_region for full chromosome

* Improve comment

* Update subworkflows/local/vcf_normalize_bcftools/main.nf

Co-authored-by: Anabella Trigila <18577080+atrigila@users.noreply.github.com>

* Update workflows/phaseimpute/main.nf

Co-authored-by: Anabella Trigila <18577080+atrigila@users.noreply.github.com>

* Rename modules

* Rename function

* Use ch_chr as channel for CHECKCHR

* Improve output naming after simulation

* Improve sbwf and channel names

* Fix sbwf name

* Fall back to lst_chr

* Patch glimpse2 phase

* Move to 23.10.0

* Update snap

* Update snapshot

* Rename full conf

* Simplify check chr in initialisation

* Simplify chr renaming channel manipulation

* Fix function

* Improve chrcheck and add documentation

* Explain format usage for input samplesheet

* Relocate function chrcheck

* Update CHANGELOG.md

Co-authored-by: Maxime U Garcia <maxime.garcia@seqera.io>

* Update conf/test_all_fullchr.config

Co-authored-by: Maxime U Garcia <maxime.garcia@seqera.io>

* Remove tem

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -28,7 +28,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHR_CHECK:VCF_CHR_RENAME:GAWK' {
-        ext.args   = 'BEGIN {FS="\\t"} NR==1 { if ($1 ~ /^chr/) { col1=""; col2="chr" } else { col1="chr"; col2="" } } { sub(/^chr/, "", $1); if ($1 ~ /^[0-9]+|[XYMT]$/) print col1$1, col2$1; else print $1, $1 }'
+        ext.args2  = 'BEGIN {FS="\\t"} NR==1 { if ($1 ~ /^chr/) { col1=""; col2="chr" } else { col1="chr"; col2="" } } { sub(/^chr/, "", $1); if ($1 ~ /^[0-9]+|[XYMT]$/) print col1$1, col2$1; else print $1, $1 }'
         ext.prefix = { "${meta.id}_chrrename" }
         ext.suffix = "txt"
         publishDir = [ enabled: false ]
@@ -51,29 +51,32 @@ process {
         publishDir = [enabled: false]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_DEL_MLT_ALL' {
-        ext.args      = '-v snps -m 2 -M 2 -Oz'
-        ext.prefix    = { "${meta.id}_${meta.chr}_biallelic_snps" }
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_VIEW' {
+        ext.args   = {
+            ["-v snps", "-m 2", "-M 2",
+            params.remove_samples ? "-s^${params.remove_samples}" : '',
+            "-Oz"
+            ].join(' ')
+        }
+        ext.prefix = { "${meta.id}_${meta.chr}_biallelic_snps" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/normalized" },
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            saveAs: { filename -> params.compute_freq ? null : filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
-        }
+    }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_2' {
         ext.args     = "--tbi"
         publishDir = [
             path: { "${params.outdir}/prep_panel/normalized" },
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            saveAs: { filename -> params.compute_freq ? null : filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
-        }
+    }
 
-    // (Optional) Subworkflow: Remove samples from panel
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_DEL_SPL' {
-        ext.args      = { "-Oz -s^${params.remove_samples}" }
-        ext.prefix    = { "${meta.id}_${meta.chr}_biallelic_removed_samples" }
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:VCFLIB_VCFFIXUP' {
+        ext.prefix   = { "${meta.id}_${meta.chr}" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/normalized" },
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
@@ -86,23 +89,6 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/normalized" },
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: true
-        ]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:VCFLIB_VCFFIXUP' {
-        ext.prefix   = { "${meta.id}_${meta.chr}" }
-        publishDir = [
-            path: { "${params.outdir}/prep_panel/compute_freq" },
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: true
-        ]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_4' {
-        ext.args     = "--tbi"
-        publishDir = [
-            path: { "${params.outdir}/prep_panel/compute_freq" },
             enabled: true
         ]
     }
@@ -127,7 +113,6 @@ process {
     }
 
     // Subworkflow: VCF_SITES_EXTRACT_BCFTOOLS
-
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:.*' {
         publishDir = [ enabled: false ]
         tag = {"${meta.id} ${meta.chr}"}
