--- a/nf-test.config
+++ b/nf-test.config
@@ -1,6 +1,9 @@
 config {
+    plugins {
+        load "nft-bam@0.2.0"
+    }
     // location for all nf-tests
-    testsDir "workflows"
+    testsDir "workflows/phaseimpute"
 
     // nf-test directory including temporary files for each test
     workDir System.getenv("NXF_TEST_DIR") ?: ".nf-test"
@@ -8,6 +11,10 @@ config {
     // location of an optional nextflow.config file specific for executing tests
     configFile "./nextflow.config"
     configFile "tests/config/nf-test.config"
+
+    stage {
+        copy "./nextflow_schema.json"
+    }
 
     // run all test with the defined docker profile from the main nextflow.config
     profile ""
