Do not publish chrcheck

--- a/conf/steps/chrcheck.config
+++ b/conf/steps/chrcheck.config
@@ -11,8 +11,20 @@
 */
 
 process {
-    // Impute with GLIMPSE1
-    withName: 'NFCORE_PHASEIMPUTE:CHRCHECK:.*' {
+    // Check input
+    withName: 'NFCORE_PHASEIMPUTE:CHRCHECK_INPUT:.*' {
+        publishDir = [ enabled: false ]
+        tag = {"${meta.id} ${meta.chr}"}
+    }
+
+    // Check input truth
+    withName: 'NFCORE_PHASEIMPUTE:CHRCHECK_TRUTH:.*' {
+        publishDir = [ enabled: false ]
+        tag = {"${meta.id} ${meta.chr}"}
+    }
+
+    // Check panel
+    withName: 'NFCORE_PHASEIMPUTE:CHRCHECK_PANEL:.*' {
         publishDir = [ enabled: false ]
         tag = {"${meta.id} ${meta.chr}"}
     }
