--- a/nextflow.config
+++ b/nextflow.config
@@ -303,6 +303,9 @@ includeConfig 'conf/modules.config'
 // initialisation step
 includeConfig 'conf/steps/initialisation.config'
 
+// chrcheck workflow
+includeConfig 'conf/steps/chrcheck.config'
+
 // simulation step
 includeConfig 'conf/steps/simulation.config'
 
