Fix sbw config name

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -30,11 +30,11 @@ process {
     // Stats
     // Simulation
     // Coverage process
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_TRT' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_INP' {
         ext.prefix = { "${meta.id}.A-truth" }
         publishDir = [ enabled: false ]
     }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_SIM' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_DWN' {
         ext.prefix = { "${meta.id}.B-sim" }
         publishDir = [ enabled: false ]
     }
