--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -43,6 +43,7 @@ process {
         publishDir = [enabled: false]
         ext.args2 = "'{ total += \$3 } END { print total/NR }'"
         ext.prefix = { "${meta.id}_C${meta.chr ?: "all"}.depth.mean" }
+        ext.suffix = "tsv"
         tag = {"${meta.id} ${meta.chr ?: "all"}"}
     }
 
