--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -19,6 +19,12 @@ process {
         tag = {"${meta.id} ${meta.chr}"}
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:GAWK' {
+        ext.args2  = "'NR>1 { split(\$1, a, \"[:-_]\"); print a[1], \$2, \$3 \",\" \$4 }'"
+        ext.prefix = { "${meta.id}" }
+        ext.suffix = "tsv"
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_MPILEUP' {
         ext.args = [
             "-I",
@@ -84,7 +90,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GAWK' {
-        ext.args   = "'(NR == 1) || (FNR > 1)'" // Skip header line
+        ext.args2  = "'(NR == 1) || (FNR > 1)'" // Skip header line
         ext.suffix = { "txt" }
         tag = {"Test Quality"}
     }
