Update Bcftools annotate

--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -44,12 +44,8 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE1:BAM_GL_BCFTOOLS:BCFTOOLS_ANNOTATE' {
-        ext.args   = "--set-id '%CHROM:%POS:%REF:%ALT' -Oz"
+        ext.args   = ["--set-id '%CHROM:%POS:%REF:%ALT'", "-Oz", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}.annotate" }
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE1:BAM_GL_BCFTOOLS:BCFTOOLS_INDEX' {
-        ext.args = "--tbi"
     }
 
     // Impute the variants
