--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -26,20 +26,15 @@ process {
         publishDir = [enabled: false]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_QUILT:BCFTOOLS_INDEX_1' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_QUILT:BCFTOOLS_INDEX' {
         ext.args     = "--tbi"
         publishDir = [enabled: false]
     }
 
     // Annotate quilt imputed VCFs
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_QUILT:BCFTOOLS_ANNOTATE' {
-        ext.args     = "--set-id '%CHROM:%POS:%REF:%ALT' -Oz"
+        ext.args     = ["--set-id '%CHROM:%POS:%REF:%ALT'", "-Oz", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}_${meta.chr}_${meta.chunk}.impute.annotate" }
-        publishDir = [ enabled: false ]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_QUILT:BCFTOOLS_INDEX_2' {
-        ext.args     = "--tbi"
         publishDir = [ enabled: false ]
     }
 
