--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -22,7 +22,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHR_CHECK:VCF_CHR_RENAME:BCFTOOLS_ANNOTATE' {
-        ext.args   = ["-Oz", "--no-version"].join(' ')
+        ext.args   = ["-Oz", "--no-version", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}_chrrename" }
         publishDir = [ enabled: false ]
     }
