--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -39,12 +39,8 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_ANNOTATE' {
-        ext.args   = ["--set-id '%CHROM:%POS:%REF:%ALT'", "-Oz"].join(' ')
+        ext.args   = ["--set-id '%CHROM:%POS:%REF:%ALT'", "-Oz", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}_${meta.chr}.annotate" }
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_INDEX' {
-        ext.args = "--tbi"
     }
 
     // Concatenate the truth set
