--- a/subworkflows/local/vcf_chr_rename_bcftools/tests/nextflow.config
+++ b/subworkflows/local/vcf_chr_rename_bcftools/tests/nextflow.config
@@ -6,7 +6,8 @@ process {
     withName: BCFTOOLS_ANNOTATE {
         ext.args = [
             "-Oz",
-            "--no-version"
+            "--no-version",
+            "--write-index=tbi"
         ].join(' ')
         ext.prefix = { "${meta.id}_chrrename" }
     }
