--- a/workflows/chrcheck/tests/nextflow.config
+++ b/workflows/chrcheck/tests/nextflow.config
@@ -7,7 +7,8 @@ process {
     withName: BCFTOOLS_ANNOTATE {
         ext.args = [
             "-Oz",
-            "--no-version"
+            "--no-version",
+            "--write-index=tbi"
         ].join(' ')
         ext.prefix = { "${meta.id}_chrrename" }
     }
