--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -37,11 +37,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:BCFTOOLS_CONCAT' {
-        ext.args   = ["--ligate", "--output-type z"].join(' ')
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:BCFTOOLS_INDEX' {
-        ext.args   = "--tbi"
+        ext.args   = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SAMPLES_BCFTOOLS:.*' {
