--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -205,11 +205,8 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_PANEL:BCFTOOLS_CONCAT' {
+        ext.args   = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}.panel" }
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_PANEL:BCFTOOLS_INDEX' {
-        ext.args = "--tbi"
     }
 
     // Subworkflow: Make chunks
