--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -54,11 +54,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:BCFTOOLS_CONCAT' {
-        ext.args = ["--ligate", "--output-type z",].join(' ')
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:BCFTOOLS_INDEX' {
-        ext.args = "--tbi"
+        ext.args   = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
     }
 
     // Validation subworkflow
