--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -81,11 +81,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE1:BCFTOOLS_CONCAT' {
-        ext.args   = ["--ligate", "--output-type z"].join(' ')
+        ext.args   = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}.glimpse1" }
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE1:BCFTOOLS_INDEX' {
-        ext.args     = "--tbi"
     }
 }
