Update Bcftools norm

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -41,14 +41,9 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_NORM' {
-        ext.args      = '-m +any --no-version --output-type z'
+        ext.args      = ["-m +any", "--no-version", "--output-type z", "--write-index=tbi"].join(' ')
         ext.prefix    = { "${meta.id}_${meta.chr}_multiallelic" }
         publishDir = [ enabled: false ]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_1' {
-        ext.args     = "--tbi"
-        publishDir = [enabled: false]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_VIEW' {
