Update bcftools pluginsplit

--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -49,7 +49,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SAMPLES_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
-        ext.args   = "-Oz"
+        ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
         ext.suffix = ".stitch"
     }
 
