Update bcftools view

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -47,12 +47,11 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_VIEW' {
-        ext.args   = {
-            ["-v snps", "-m 2", "-M 2",
+        ext.args   = [
+            "-v snps", "-m 2", "-M 2",
             params.remove_samples ? "-s^${params.remove_samples}" : '',
-            "-Oz"
-            ].join(' ')
-        }
+            "--output-type z", "--write-index=tbi"
+        ].join(' ')
         ext.prefix = { "${meta.id}_${meta.chr}_biallelic_snps" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/normalized" },
@@ -130,6 +129,7 @@ process {
             "-M 2",
             "-v snps",
             "--output-type z",
+            "--write-index=tbi",
             "--no-version"
         ].join(' ')
         ext.prefix = { "${meta.id}_${meta.chr}_glimpse1_sites" }
