--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -17,7 +17,7 @@ process {
         tag = {"${meta.id} ${meta.chr}"}
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:SAMTOOLS_VIEW' {
-        ext.args   = "--output-fmt bam"
+        ext.args   = ["--output-fmt bam", "--write-index"].join(' ')
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}" }
     }
 
@@ -25,7 +25,7 @@ process {
         ext.prefix = { "${meta.id}" }
         tag = {"${meta.id} ${meta.chr}"}
     }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:SAMTOOLS_INDEX_2' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:SAMTOOLS_INDEX' {
         ext.args = ""
     }
 
@@ -48,7 +48,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_VIEW' {
-        ext.args   = "--output-fmt bam"
+        ext.args   = ["--output-fmt bam", "--write-index"].join(' ')
         ext.prefix = { "${meta.id}_depth_${meta.depth}x" }
         publishDir = [
             path: { "${params.outdir}/simulation/" },
@@ -56,13 +56,5 @@ process {
             saveAs: {  filename -> filename.equals('versions.yml') ? null : filename  }
         ]
         tag = {"${meta.id} ${meta.chr}"}
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_INDEX' {
-        publishDir = [
-            path: { "${params.outdir}/simulation/" },
-            mode: params.publish_dir_mode,
-            saveAs: {  filename -> filename.equals('versions.yml') ? null : filename  }
-        ]
     }
 }
