Change compute_freq default to false

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,7 @@ params {
     // Panel preparation
     panel                       = null
     phased                      = null
-    compute_freq                = true
+    compute_freq                = false
     rename_chr                  = false
     remove_samples              = null
 
