--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -60,15 +60,6 @@ process {
         ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_2' {
-        ext.args     = "--tbi"
-        publishDir = [
-            path: { "${params.outdir}/prep_panel/normalized" },
-            saveAs: { filename -> params.compute_freq ? null : filename.equals('versions.yml') ? null : filename },
-            enabled: true
-        ]
-    }
-
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:VCFLIB_VCFFIXUP' {
         ext.prefix   = { "${meta.id}_${meta.chr}" }
         publishDir = [
@@ -78,7 +69,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_3' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX' {
         ext.args     = "--tbi"
         publishDir = [
             path: { "${params.outdir}/prep_panel/normalized" },
