--- a/nextflow.config
+++ b/nextflow.config
@@ -38,6 +38,8 @@ params {
     multiqc_logo                = null
     max_multiqc_email_size      = '25.MB'
     multiqc_methods_description = null
+    multiqc_replace_names       = null
+    multiqc_sample_names        = null
 
     // Simulate
     depth                       = 1
