--- a/conf/steps/chrcheck.config
+++ b/conf/steps/chrcheck.config
@@ -28,4 +28,8 @@ process {
         publishDir = [ enabled: false ]
         tag = {"${meta.id} ${meta.chr}"}
     }
+
+    withName: 'NFCORE_PHASEIMPUTE:CHRCHECK_.*:VCF_CHR_RENAME_BCFTOOLS:BCFTOOLS_ANNOTATE' {
+        ext.args   = ["-Oz", "--no-version", "--write-index=tbi"].join(' ')
+    }
 }
