--- a/conf/test_dog_panelprep.config
+++ b/conf/test_dog_panelprep.config
@@ -20,15 +20,25 @@ params {
     max_time   = '1.h'
 
     // Genome references
-    fasta        = params.pipelines_testdata_base_path + "dog_data/reference_genome/canFam3.s.fa"
+    fasta        = params.pipelines_testdata_base_path + "dog_data/reference_genome/canFam3.s.fa.gz"
+    fasta_fai    = params.pipelines_testdata_base_path + "dog_data/reference_genome/canFam3.s.fa.gz.fai"
     panel        = "${projectDir}/tests/csv/panel_dog.csv"
     phased       = false
+    rename_chr   = true
 
     // Pipeline steps
     steps   = "panelprep"
 }
 
 process {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE_CHUNK' {
+        ext.args = ["--window-size 10000", "--window-count 400", "--buffer-size 5000", "--buffer-count 30"].join(' ')
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE2_CHUNK' {
+        ext.args = ["--window-mb 0.01", "--window-cm 0.01", "--window-count 200", "--buffer-mb 0.005", "--buffer-cm 0.005", "--buffer-count 30"].join(' ')
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:GLIMPSE2_CHUNK' {
         ext.args = ["--window-mb 0.01", "--window-cm 0.01", "--window-count 200", "--buffer-mb 0.005", "--buffer-cm 0.005", "--buffer-count 30"].join(' ')
     }
