Add new nf-test for local sbwf and modules

--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -56,8 +56,8 @@ process {
         publishDir = [ enabled: false ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE1:BCFTOOLS_INDEX_2' {
-        ext.args   = "--tbi"
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE1:BCFTOOLS_INDEX_1' {
+        ext.args   = "--csi"
         publishDir = [ enabled: false ]
     }
 
