--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -12,34 +12,34 @@
 
 process {
     // Optional subworkflow to extract regions
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:.*' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION_SAMTOOLS:.*' {
         publishDir = [ enabled: false ]
         tag = {"${meta.id} ${meta.chr}"}
     }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:SAMTOOLS_VIEW' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION_SAMTOOLS:SAMTOOLS_VIEW' {
         ext.args   = ["--output-fmt bam", "--write-index"].join(' ')
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}" }
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:SAMTOOLS_MERGE' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION_SAMTOOLS:SAMTOOLS_MERGE' {
         ext.prefix = { "${meta.id}" }
         tag = {"${meta.id} ${meta.chr}"}
     }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:SAMTOOLS_INDEX' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION_SAMTOOLS:SAMTOOLS_INDEX' {
         ext.args = ""
     }
 
     // Downsampling subworkflow
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:.*' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE_SAMTOOLS:.*' {
         tag = {"${meta.id} ${meta.chr}"}
     }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_DEPTH' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE_SAMTOOLS:SAMTOOLS_DEPTH' {
         publishDir = [enabled: false]
         ext.prefix = { "${meta1.id}_C${meta1.chr ?: "all"}.depth" }
         tag = {"${meta1.id} ${meta1.chr ?: "all"}"}
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:GAWK' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE_SAMTOOLS:GAWK' {
         publishDir = [enabled: false]
         ext.args2 = "'{ total += \$3 } END { print total/NR }'"
         ext.prefix = { "${meta.id}_C${meta.chr ?: "all"}.depth.mean" }
@@ -47,7 +47,7 @@ process {
         tag = {"${meta.id} ${meta.chr ?: "all"}"}
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_VIEW' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE_SAMTOOLS:SAMTOOLS_VIEW' {
         ext.args   = ["--output-fmt bam", "--write-index"].join(' ')
         ext.prefix = { "${meta.id}_depth_${meta.depth}x" }
         publishDir = [
