--- a/subworkflows/local/vcf_concordance_glimpse2/tests/nextflow.config
+++ b/subworkflows/local/vcf_concordance_glimpse2/tests/nextflow.config
@@ -4,6 +4,7 @@ params {
 
 process {
     withName: 'VCF_CONCORDANCE_GLIMPSE2:GAWK' {
+        ext.args2  = "'(NR == 1) || (FNR > 1)'" // Skip header line
         ext.suffix = "txt"
     }
 }
