Add new nf-tests

--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -40,7 +40,7 @@ process {
         ext.args   = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SAMPLES_BCFTOOLS:.*' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SPLIT_BCFTOOLS:.*' {
         publishDir = [
             path: { "${params.outdir}/imputation/stitch/concat" },
             mode: params.publish_dir_mode,
@@ -48,13 +48,9 @@ process {
         ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SAMPLES_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SPLIT_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
         ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
         ext.suffix = ".stitch"
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SAMPLES_BCFTOOLS:BCFTOOLS_INDEX' {
-        ext.args   = "--tbi"
     }
 
 }
