--- a/nextflow.config
+++ b/nextflow.config
@@ -229,7 +229,7 @@ profiles {
     test_stitch         { includeConfig 'conf/test_stitch.config'       }
     test_glimpse2       { includeConfig 'conf/test_glimpse2.config'     }
     test_panelprep      { includeConfig 'conf/test_panelprep.config'    }
-    test_dog_panelprep  { includeConfig 'conf/test_dog_panelprep.config'}
+    test_dog            { includeConfig 'conf/test_dog.config'}
 
 }
 
