--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -125,7 +125,7 @@ process {
         ].join(' ')
         ext.prefix = { "${meta.id}_${meta.chr}_glimpse1_sites" }
         publishDir = [
-            path: { "${params.outdir}/prep_panel/sites/vcf/" },
+            path: { "${params.outdir}/prep_panel/sites/" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
@@ -135,7 +135,7 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_INDEX' {
         ext.prefix = { "${meta.id}_${meta.chr}_glimpse1_sites" }
         publishDir = [
-            path: { "${params.outdir}/prep_panel/sites/vcf/" },
+            path: { "${params.outdir}/prep_panel/sites/" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
