--- a/nextflow.config
+++ b/nextflow.config
@@ -21,6 +21,7 @@ params {
     // Panel preparation
     panel                       = null
     phased                      = null
+    normalize                   = false
     compute_freq                = false
     rename_chr                  = false
     remove_samples              = null
