--- a/nextflow.config
+++ b/nextflow.config
@@ -16,7 +16,7 @@ params {
     input                       = null
     input_region                = null
     map                         = null
-    tools                       = ""
+    tools                       = null
 
     // Panel preparation
     panel                       = null
