Nf core template merge 3.0.1 (#128)
* Template update for nf-core/tools version 3.0.0

* Template update for nf-core/tools version 3.0.1

* Update template_version_comment.yml

* Update template_version_comment.yml

* Add title to usage files

* Remove old way igenomes config

* Update main.nf and utils nf-core sbwf

* Update schema json

* Fix linting

* Update validation snap

---------

Co-authored-by: nf-core-bot <core@nf-co.re>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ on:
       - master
   release:
     types: [published]
+  workflow_dispatch:
 
 env:
   NXF_ANSI_LOG: false
@@ -66,3 +67,13 @@ jobs:
       - name: Run pipeline with test data
         run: |
           nf-test test --tag "${{ matrix.TEST_PROFILE }}" --profile docker --verbose
+
+      - name: Run pipeline with test data (singularity)
+        run: |
+          nf-test test --tag "${{ matrix.TEST_PROFILE }}" --profile singularity
+        if: "${{ github.base_ref == 'master' }}"
+
+      - name: Run pipeline with test data (conda)
+        run: |
+          nf-test test --tag "${{ matrix.TEST_PROFILE }}" --profile conda
+        if: "${{ github.base_ref == 'master' }}"
