--- a/conf/test_all_fullchr.config
+++ b/conf/test_all_fullchr.config
@@ -10,14 +10,17 @@
 ----------------------------------------------------------------------------------------
 */
 
+process {
+    resourceLimits = [
+        cpus: 24,
+        memory: '50.GB',
+        time: '4.h'
+    ]
+}
+
 params {
     config_profile_name        = 'Test profile'
     config_profile_description = 'Minimal test dataset to check all steps on full chromosomes'
-
-    // Limit resources so that this can run on GitHub Actions
-    max_cpus   = 24
-    max_memory = '50.GB'
-    max_time   = '4.h'
 
     // Genome references
     fasta  = params.pipelines_testdata_base_path + "hum_data/reference_genome/GRCh38.s.fa.gz"
