--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -10,6 +10,14 @@
 ----------------------------------------------------------------------------------------
 */
 
+process {
+    resourceLimits = [
+        cpus: 12,
+        memory: '50.GB',
+        time: '6.h'
+    ]
+}
+
 params {
     config_profile_name        = 'Full test profile'
     config_profile_description = 'Full test dataset to check pipeline function'
@@ -17,11 +25,6 @@ params {
     // Genome references
     //map             = "https://bochet.gcc.biostat.washington.edu/beagle/genetic_maps/plink.GRCh38.map.zip"
     genome          = "GRCh38"
-
-    // Resources increase incompatible with Github Action
-    max_cpus   = 12
-    max_memory = '50.GB'
-    max_time   = '6.h'
 
     // Input data
     input  = "${projectDir}/tests/csv/sample_sim_full.csv"
