--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -10,14 +10,17 @@
 ----------------------------------------------------------------------------------------
 */
 
+process {
+    resourceLimits = [
+        cpus: 2,
+        memory: '10.GB',
+        time: '1.h'
+    ]
+}
+
 params {
     config_profile_name        = 'Test simulation / imputation / validation mode'
     config_profile_description = 'Minimal test dataset to check pipeline function'
-
-    // Limit resources so that this can run on GitHub Actions
-    max_cpus     = 2
-    max_memory   = '6.GB'
-    max_time     = '6.h'
 
     // Input data
     input        = "${projectDir}/tests/csv/sample_sim.csv"
