--- a/conf/test_dog.config
+++ b/conf/test_dog.config
@@ -10,14 +10,17 @@
 ----------------------------------------------------------------------------------------
 */
 
+process {
+    resourceLimits = [
+        cpus: 2,
+        memory: '2.GB',
+        time: '1.h'
+    ]
+}
+
 params {
     config_profile_name        = 'Test profile'
     config_profile_description = 'Minimal test dataset to check panel prepation steps in dog genome'
-
-    // Limit resources so that this can run on GitHub Actions
-    max_cpus   = 2
-    max_memory = '2.GB'
-    max_time   = '1.h'
 
     // Genome references
     fasta        = params.pipelines_testdata_base_path + "dog_data/reference_genome/canFam3.s.fa.gz"
