--- a/conf/test_glimpse2.config
+++ b/conf/test_glimpse2.config
@@ -10,14 +10,17 @@
 ----------------------------------------------------------------------------------------
 */
 
+process {
+    resourceLimits = [
+        cpus: 2,
+        memory: '2.GB',
+        time: '1.h'
+    ]
+}
+
 params {
     config_profile_name        = 'Test profile'
     config_profile_description = 'Minimal test dataset to check pipeline function with GLIMPSE2'
-
-    // Limit resources so that this can run on GitHub Actions
-    max_cpus   = 2
-    max_memory = '2.GB'
-    max_time   = '1.h'
 
     // Input data
     input  = "${projectDir}/tests/csv/sample_bam.csv"
