--- a/conf/test_panelprep.config
+++ b/conf/test_panelprep.config
@@ -10,14 +10,17 @@
 ----------------------------------------------------------------------------------------
 */
 
+process {
+    resourceLimits = [
+        cpus: 2,
+        memory: '2.GB',
+        time: '1.h'
+    ]
+}
+
 params {
     config_profile_name        = 'Test profile'
     config_profile_description = 'Minimal test dataset to check panel prepation steps'
-
-    // Limit resources so that this can run on GitHub Actions
-    max_cpus   = 2
-    max_memory = '2.GB'
-    max_time   = '1.h'
 
     // Genome references
     fasta          = params.pipelines_testdata_base_path + "hum_data/reference_genome/GRCh38.s.fa.gz"
