--- a/conf/test_dog.config
+++ b/conf/test_dog.config
@@ -27,13 +27,14 @@ params {
     fasta_fai    = params.pipelines_testdata_base_path + "dog_data/reference_genome/canFam3.s.fa.gz.fai"
     panel        = "${projectDir}/tests/csv/panel_dog.csv"
     phased       = false
+    normalize    = false
+    compute_freq = false
     rename_chr   = true
     input        = params.pipelines_testdata_base_path + "dog_data/csv/sample_dog.csv"
 
     // Pipeline steps
     steps   = "panelprep,impute"
     tools   = "glimpse1,glimpse2,quilt"
-
 }
 
 process {
