--- a/conf/test_panelprep.config
+++ b/conf/test_panelprep.config
@@ -27,6 +27,7 @@ params {
     input_region   = "${projectDir}/tests/csv/region.csv"
     panel          = "${projectDir}/tests/csv/panel.csv"
     phased         = true
+    normalize      = true
     compute_freq   = true
     remove_samples = "HG00096,HG00097,HG00099,HG00100"
 
