Update tests snapshot

--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -31,6 +31,7 @@ params {
     fasta        = params.pipelines_testdata_base_path + "hum_data/reference_genome/GRCh38.s.fa.gz"
     panel        = "${projectDir}/tests/csv/panel.csv"
     phased       = false
+    normalize    = false
     compute_freq = false
 
     // Pipeline steps
