Change phased to phase

--- a/conf/test_all_fullchr.config
+++ b/conf/test_all_fullchr.config
@@ -5,7 +5,7 @@
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run nf-core/phaseimpute -profile test_panelprep,<docker/singularity> --outdir <OUTDIR>
+        nextflow run nf-core/phaseimpute -profile test_all_fullchr,<docker/singularity> --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
@@ -25,11 +25,16 @@ params {
     // Genome references
     fasta  = params.pipelines_testdata_base_path + "hum_data/reference_genome/GRCh38.s.fa.gz"
     panel  = "${projectDir}/tests/csv/panel_fullchr.csv"
-    phased = false
     input  = "${projectDir}/tests/csv/sample_sim_full.csv"
+
     // Pipeline steps
     steps   = "all"
     tools   = "glimpse1,glimpse2,quilt,stitch"
     depth   = 1
+
+    // Panelprep optional args
     remove_samples = "NA12878,NA19401,NA20359,NA12891,NA12892,NA20362"
+    normalize      = true
+    compute_freq   = false
+    phase          = false
 }
