--- a/conf/test_dog.config
+++ b/conf/test_dog.config
@@ -26,10 +26,14 @@ params {
     fasta        = params.pipelines_testdata_base_path + "dog_data/reference_genome/canFam3.s.fa.gz"
     fasta_fai    = params.pipelines_testdata_base_path + "dog_data/reference_genome/canFam3.s.fa.gz.fai"
     panel        = "${projectDir}/tests/csv/panel_dog.csv"
-    phased       = false
+
+    // Panelprep optional args
+    phase        = true
     normalize    = false
     compute_freq = false
     rename_chr   = true
+
+    // Input data
     input        = params.pipelines_testdata_base_path + "dog_data/csv/sample_dog.csv"
 
     // Pipeline steps
