--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -52,40 +52,38 @@ process {
             params.remove_samples ? "-s^${params.remove_samples}" : '',
             "--output-type z", "--write-index=tbi"
         ].join(' ')
-        ext.prefix = { "${meta.id}_${meta.chr}_biallelic_snps" }
+        ext.prefix = { "${meta.id}_${meta.chr}_normalized" }
         publishDir = [
-            path: { "${params.outdir}/prep_panel/normalized" },
-            saveAs: { filename -> params.compute_freq ? null : filename.equals('versions.yml') ? null : filename },
-            enabled: true
+            path: { "${params.outdir}/prep_panel/panel" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: !params.compute_freq && !params.phase
         ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:VCFLIB_VCFFIXUP' {
-        ext.prefix   = { "${meta.id}_${meta.chr}" }
+        ext.prefix   = { "${meta.id}_${meta.chr}_fixup" }
         publishDir = [
-            path: { "${params.outdir}/prep_panel/normalized" },
+            path: { "${params.outdir}/prep_panel/panel" },
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: true
+            enabled: !params.phase
         ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX' {
         ext.args     = "--tbi"
         publishDir = [
-            path: { "${params.outdir}/prep_panel/normalized" },
+            path: { "${params.outdir}/prep_panel/panel" },
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: true
+            enabled: !params.phase
         ]
     }
 
     // Subworkflow: VCF_PHASE_SHAPEIT5
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:.*' {
-        publishDir = [
-            path: { "${params.outdir}/prep_panel/phasing" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: false
-        ]
+        publishDir = [ enabled: false ]
         tag = {"${meta.id} ${meta.chr}"}
     }
 
@@ -95,6 +93,27 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:SHAPEIT5_PHASECOMMON' {
         ext.prefix = { "${meta.id}_${meta.chunk.replace(':',"_")}_chunks" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:SHAPEIT5_LIGATE' {
+        ext.prefix = { "${meta.id}_${meta.chr}_phased" }
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/panel" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: true
+        ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:VCF_BCFTOOLS_INDEX_2' {
+        ext.prefix = { "${meta.id}_${meta.chr}_phased" }
+        ext.args   = "--csi"
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/panel" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: true
+        ]
     }
 
     // Subworkflow: VCF_SITES_EXTRACT_BCFTOOLS
