--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -57,7 +57,7 @@ process {
             path: { "${params.outdir}/prep_panel/panel" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: !params.compute_freq && !params.phase
+            enabled: { !params.compute_freq && !params.phase }
         ]
     }
 
@@ -67,7 +67,7 @@ process {
             path: { "${params.outdir}/prep_panel/panel" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: !params.phase
+            enabled: { !params.phase }
         ]
     }
 
@@ -77,7 +77,7 @@ process {
             path: { "${params.outdir}/prep_panel/panel" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: !params.phase
+            enabled: { !params.phase }
         ]
     }
 
