Normalization as optional and publishing improvment (#131)
* New dev

* Rename function

* Fix function

* Update workflow name

* Update tests

* Update function usage

* Update tests snapshot

* Update changelog

* Change phased to phase

* Update documentation

* Update snapshot

* Update publishing panel

* Update test

* Update docs/usage.md

Co-authored-by: Anabella Trigila <18577080+atrigila@users.noreply.github.com>

---------

Co-authored-by: Anabella Trigila <18577080+atrigila@users.noreply.github.com>

--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -30,7 +30,8 @@ params {
     // Genome references
     fasta        = params.pipelines_testdata_base_path + "hum_data/reference_genome/GRCh38.s.fa.gz"
     panel        = "${projectDir}/tests/csv/panel.csv"
-    phased       = false
+    phase        = true
+    normalize    = true
     compute_freq = false
 
     // Pipeline steps
