--- a/conf/test_panelprep.config
+++ b/conf/test_panelprep.config
@@ -26,7 +26,10 @@ params {
     fasta          = params.pipelines_testdata_base_path + "hum_data/reference_genome/GRCh38.s.fa.gz"
     input_region   = "${projectDir}/tests/csv/region.csv"
     panel          = "${projectDir}/tests/csv/panel.csv"
-    phased         = true
+
+    // Panelprep optional args
+    phase          = true
+    normalize      = true
     compute_freq   = true
     remove_samples = "HG00096,HG00097,HG00099,HG00100"
 
