--- a/nextflow.config
+++ b/nextflow.config
@@ -20,7 +20,8 @@ params {
 
     // Panel preparation
     panel                       = null
-    phased                      = null
+    phase                       = false
+    normalize                   = true
     compute_freq                = false
     rename_chr                  = false
     remove_samples              = null
