--- a/subworkflows/local/bam_impute_glimpse1/tests/nextflow.config
+++ b/subworkflows/local/bam_impute_glimpse1/tests/nextflow.config
@@ -1,4 +1,11 @@
 process {
+
+    resourceLimits = [
+        cpus: 4,
+        memory: '2.GB',
+        time: '6.h'
+    ]
+
     withName: GAWK {
         ext.args2  = "'NR>1 { split(\$1, a, \"[:-_]\"); print a[1], \$2, \$3 \",\" \$4 }'"
         ext.suffix = "txt"
@@ -13,6 +20,13 @@ process {
         ext.args2 = [
             "-Aim",
             "-C alleles"
+        ].join(' ')
+        ext.prefix = { "${meta.id}" }
+    }
+
+    withName: BCFTOOLS_MERGE {
+        ext.args = [
+            "--write-index=tbi",
         ].join(' ')
         ext.prefix = { "${meta.id}" }
     }
