--- a/subworkflows/local/bam_impute_quilt/tests/nextflow.config
+++ b/subworkflows/local/bam_impute_quilt/tests/nextflow.config
@@ -1,4 +1,11 @@
 process {
+
+    resourceLimits = [
+        cpus: 4,
+        memory: '2.GB',
+        time: '6.h'
+    ]
+
     // Impute quilt
     withName: QUILT_QUILT {
         ext.prefix = { "${meta.id}_${meta.chr}_${meta.chunk}.impute" }
