--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -38,6 +38,13 @@ process {
         ext.prefix = { "${meta.id}_truth.call" }
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_MERGE' {
+        ext.args = [
+            "--write-index=tbi",
+        ].join(' ')
+        ext.prefix = { "${meta.id}" }
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_ANNOTATE' {
         ext.args   = ["--set-id '%CHROM:%POS:%REF:%ALT'", "-Oz", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}_${meta.chr}.annotate" }
