Add batch_size and group samples in main workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -52,6 +52,9 @@ params {
     min_val_gl                  = 0.9
     min_val_dp                  = 5
 
+    // Imputation
+    batch_size                 = 100
+
     // QUILT
     ngen                       = 100
     buffer                     = 10000
