--- a/conf/steps/chrcheck.config
+++ b/conf/steps/chrcheck.config
@@ -14,13 +14,13 @@ process {
     // Check input
     withName: 'NFCORE_PHASEIMPUTE:CHRCHECK_INPUT:.*' {
         publishDir = [ enabled: false ]
-        tag = {"${meta.id} ${meta.chr}"}
+        tag = {"${meta.id}"}
     }
 
     // Check input truth
     withName: 'NFCORE_PHASEIMPUTE:CHRCHECK_TRUTH:.*' {
         publishDir = [ enabled: false ]
-        tag = {"${meta.id} ${meta.chr}"}
+        tag = {"${meta.id}"}
     }
 
     // Check panel
