--- a/tests/config/nf-test.config
+++ b/tests/config/nf-test.config
@@ -1,14 +1,13 @@
 params {
     publish_dir_mode = "copy"
-    singularity_pull_docker_container = false
-    test_data_base = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules'
-    modules_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/'
 }
 
 process {
-    cpus = 4
-    memory = 3.GB
-    time = 2.h
+    resourceLimits = [
+        cpus: 4,
+        memory: '3.GB',
+        time: '2.h'
+    ]
 }
 
 profiles {
@@ -44,7 +43,7 @@ singularity.registry = 'quay.io'
 conda { createTimeout = "120 min" }
 
 // Load test_data.config containing paths to test data
-includeConfig 'test_data.config'
+// includeConfig 'test_data.config'
 
 manifest {
     nextflowVersion = '!>=23.04.0'
