--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -11,7 +11,7 @@
 */
 
 process {
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_INPUT_STITCH:GAWK' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:GAWK' {
         ext.args2  = "'BEGIN { OFS=\"\\t\" } NR>1  { split(\$1, a, \"[:-_]\"); print a[1], \$2, \$3, \$4 }'" // Remove duplicates
         ext.prefix = { "${meta.id}_${meta.chr}_posfile_stitch" }
         ext.suffix = "txt"
